--- a/index.html
+++ b/index.html
@@ -15,39 +15,48 @@
     <p class="click"><a id="clicks" class="clicks">0</a></p>
    <section class="menu">
     <button class="shopbutton" ><a href="#zatemnenie" >Shop</a></button>
-    <button class="shopbutton" ><a href="#zatemnenies" >Soon</a></button>
    </section>
 
    <div id="zatemnenie">
     <div id="okno">
-      <p class="shops">SHOP</p><br>
-      <button class="button_in_shop" ><a href="#info" >CLICK BOOST</a></button>
-      </div>
-      <a href="#" class="close"></a>
+        <p class="shops">SHOP</p><br>
+        <button class="button_in_shop"><a href="#info">CLICK BOOST</a></button>
+        <button class="button_in_shop"><a href="#infos">soon</a></button>
     </div>
+    <a href="#" class="close"></a>
+</div>
 
-
-  
-  
-  
-  <div id="info">
+<div id="info">
     <div id="inf">
-      <div class="info_text">
-        <div class="info_boost">
-        <p id="boosts_lvl"></p>
-        <p id="price_boost"></p>
-        <center><h2>2x к кликам</h2></center>
-        <p id="click_up""></p>
-      </div>
-      </div>
+        <div class="info_text">
+            <div class="info_boost">
+                <p id="boosts_lvl"></p>
+                <p id="price_boost"></p>
+                <center><h2>2x к кликам</h2></center>
+                <p id="click_up"></p>
+            </div>
+        </div>
         <p id="boosts"></p>
-      </div>
-    
-      <button class="upbutton" onclick='buyboostclick()''>Up</button>
-      <a href="#zatemnenie" class="close"></a>
     </div>
-  </div>
+    <button class="upbutton" onclick="buyboostclick()">Up</button>
+    <a href="#zatemnenie" class="close"></a>
+</div>
 
+<div id="infos">
+    <div id="inf2">
+        <div class="info_text">
+            <div class="info_boost">
+                <p id="boosts_lvl"></p>
+                <p id="price_boost"></p>
+                <center><h2>2x к кликам</h2></center>
+                <p id="click_up"></p>
+            </div>
+        </div>
+        <p id="boosts"></p>
+    </div>
+    <button class="upbutton" onclick="buyboostclick()">Up</button>
+    <a href="#zatemnenie" class="close"></a>
+</div>
 
 
 
