--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="function.js"></script>
     <title>Poopcoin</title>
 </head>
-
 <body>
+  <script>document.getElementById("clicks").innerHTML = clicks;</script>
     <div class="svet"></div>
     <script>
       document.getElementById('coin').addEventListener('click', function() {
